--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -25,6 +25,7 @@
 
 .navItem {
   padding: 0 0.5rem;
+  margin: 0.5em;
 }
 
 .icon {
@@ -32,4 +33,14 @@
   cursor: pointer;
   height: 1.5rem;
   width: 1.5rem;
+}
+
+.socialMedia {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+  margin: 1em;
+  height: 30px;
 }
