--- a/src/Components/PeopleComponent/People.module.css
+++ b/src/Components/PeopleComponent/People.module.css
@@ -1,14 +1,11 @@
-.main {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
   width: 100%;
-  background-color: #fff;
-  color: #000;
-  position: fixed;
+  height: 100%;
+  margin: 1em;
 }
 
 .top {
@@ -16,18 +13,33 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 20%;
+  height: 35em;
+  width: 30em;
+}
+
+.top img {
   width: 100%;
-  padding: 2em;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .bottom {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+}
+
+.bottomTop {
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: 50%;
   width: 100%;
   padding: 2em;
 }
-
