--- a/src/Components/RoverModel/RoverModel.module.css
+++ b/src/Components/RoverModel/RoverModel.module.css
@@ -8,11 +8,12 @@
   height: 50vh;
   padding: 0 1rem;
   overflow: hidden;
+  background-color: #f5f5f5;
 }
 
 .canvas {
   width: 100%;
   height: 100%;
-  background-color: #f5f5f5;
   overflow: hidden;
+  filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.2));
 }
