--- a/src/Components/TurnOnComponent/TurnOn.module.css
+++ b/src/Components/TurnOnComponent/TurnOn.module.css
@@ -1,19 +1,18 @@
 .botonLuz {
-  background-color: #000000;
   color: white;
-  width: 100px;
-  height: 30px;
-  border-radius: 10px;
+  height: 3em;
+  width: 100%;
   cursor: pointer;
   font-family: Lato, sans-serif;
+  border: none;
+  background-color: black;
 }
 
 .botonLuzApagada {
-  background-color: #ffffff;
-  color: black;
-  width: 100px;
-  height: 30px;
-  border-radius: 10px;
+  width: 100%;
+  height: 3em;
   cursor: pointer;
+  background-color: black;
   font-family: Lato, sans-serif;
+  border: none;
 }
