--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,9 +1,9 @@
 .main {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
+  padding: 5em;
   min-height: 100vh;
   background-color: #fff;
   color: #000;
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .leftContainer {
@@ -22,7 +23,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 90%;
+  height: 100%;
+  padding: 1em;
+  border: 1px solid #000;
 }
 
 .rightContainer {
@@ -30,8 +34,42 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 20%;
+  width: 10%;
   height: 100%;
-  border-left: 1px solid #000;
   padding: 1em;
+}
+
+.middleContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+}
+
+.middleLeftContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  padding: 1em;
+}
+
+.middleRightContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  padding: 1em;
+}
+
+.temperatureIcon {
+  width: 2em;
+  height: 100%;
 }
