--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -23,10 +23,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 100%;
   height: 100%;
-  padding: 1em;
-  border: 1px solid #000;
 }
 
 .rightContainer {
@@ -37,6 +35,7 @@
   width: 10%;
   height: 100%;
   padding: 1em;
+  border-left: 1px solid #000;
 }
 
 .middleContainer {
@@ -57,6 +56,7 @@
   width: 50%;
   height: 100%;
   padding: 1em;
+  margin: 1em;
 }
 
 .middleRightContainer {
@@ -72,4 +72,21 @@
 .temperatureIcon {
   width: 2em;
   height: 100%;
+}
+
+.topContainerCamera {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 50%;
+  padding: 1em;
+  box-sizing: border-box;
+}
+.camera {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 0 auto;
 }
