--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -90,3 +90,14 @@
   object-fit: cover;
   margin: 0 auto;
 }
+
+.bottomContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 50%;
+  padding: 1em;
+  box-sizing: border-box;
+}
