--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -35,12 +35,22 @@
   width: 1.5rem;
 }
 
-.socialMedia {
+.socialMediaContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+  margin-left: 0.5em;
+  height: 25px;
+  border-left: 1px solid #ffffff;
+}
+
+.socialMedias {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
   list-style: none;
-  margin: 1em;
-  height: 30px;
+  margin: 0.2em;
+  height: 25px;
 }
