--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,9 +5,9 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  background-color: #fff;
-  color: #000;
+  color: #ffffff;
 }
+
 .right {
   width: 50%;
   display: flex;
@@ -15,6 +15,7 @@
   justify-content: space-between;
   padding: 1em;
   text-align: justify;
+  background-color: #ffffff;
 }
 
 .left {
@@ -22,8 +23,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1em;
+  padding: 5em;
   text-align: justify;
+  background-color: black;
+  color: white;
 }
 
 .top {
@@ -52,6 +55,9 @@
 
 .top h1 {
   font-size: 4rem;
+  overflow: hidden;
+  white-space: nowrap;
+  animation: type 5s steps(40, end) forwards;
 }
 
 .bottom p {
@@ -64,4 +70,15 @@
   height: 100%;
   object-fit: cover;
   filter: drop-shadow(16px 16px 20px rgba(0, 0, 0, 0.5));
+}
+
+@keyframes type {
+  from {
+    width: 0;
+    border-right: 2px solid white;
+  }
+  to {
+    width: 100%;
+    border-right: none;
+  }
 }
