--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -28,14 +28,14 @@
   margin: 0.5em;
 }
 
-.icon {
+.logo {
   color: #ffffff;
   cursor: pointer;
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 4em;
+  width: 4em;
 }
 
-.socialMediaContainer{
+.socialMediaContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
