--- a/src/Components/RoverModel/RoverModel.module.css
+++ b/src/Components/RoverModel/RoverModel.module.css
@@ -6,9 +6,8 @@
   margin: 0 auto;
   width: 100%;
   height: 50vh;
-  padding: 0 1rem;
+  padding: 1em;
   overflow: hidden;
-  background-color: #f5f5f5;
 }
 
 .canvas {
