--- a/src/Components/PeopleComponent/People.module.css
+++ b/src/Components/PeopleComponent/People.module.css
@@ -1,45 +1,74 @@
 .container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  margin: 1em;
-}
-
-.top {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 35em;
-  width: 30em;
-}
-
-.top img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 20%;
-  width: 100%;
-}
-
-.bottomTop {
-  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 50%;
+  padding: 0;
+  width: 90%;
+  max-width: 1600px;
+  color: #ffffff;
+  margin: 2em auto;
+}
+
+.container:hover {
+  scale: 1.1;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+}
+
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10em;
+  height: 10em;
+  margin: 0;
+  padding: 0;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 10px 0 #ffffff;
+}
+
+.imgContainer img {
   width: 100%;
-  padding: 2em;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+}
+
+.rightTop {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.rightBottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0;
+  margin-top: 1em;
 }
