--- a/src/app/team/page.module.css
+++ b/src/app/team/page.module.css
@@ -1,37 +1,57 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  width: 100%;
-  background-color: #fff;
-  color: #000;
-  position: fixed;
+  background-color: #000000;
+  margin: 0 auto;
 }
 
 .top {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 20%;
   width: 100%;
-  padding: 2em;
+  padding: 0;
+  margin: 0;
 }
 
 .bottom {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 80%;
   width: 100%;
-  padding: 2em;
+  padding: 0;
+  margin: 0;
 }
 
-.title{
-  font-size: 2.5rem;
-  font-weight: 700;
+.leftBottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.rightBottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+.peopleContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 1200px;
+  color: #ffffff;
 }
