--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -1,181 +1,118 @@
-.navbar {
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 1.2rem;
-  font-weight: 500;
-  padding: 0.5rem 1rem;
+.Header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5em;
+  padding: 0 30px;
   position: fixed;
   top: 0;
-  z-index: 1;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-}
-
-.navbarNav {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  list-style: none;
-  margin: 0;
-}
-
-.navItem {
-  padding: 0 0.5rem;
-  margin: 0.5em;
-}
-
-.logo {
-  color: #ffffff;
-  cursor: pointer;
-  height: 4em;
-  width: 4em;
-  padding: 0.5em;
-  margin-left: 4em;
-}
-
-.socialMediaContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  list-style: none;
-  margin-left: 0.5em;
-  height: 25px;
-  border-left: 1px solid #ffffff;
-}
-
-.socialMedias {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  list-style: none;
-  margin: 0.2em;
-  height: 25px;
-}
-
-.open {
-  display: none;
-}
-
-.hamburger {
-  padding: 1em;
-  font-size: 1.2rem;
-  position: absolute;
-  bottom: 0.02;
-  border: none;
+  left: 0;
+  right: 0;
   z-index: 999;
-  cursor: pointer;
-  position: fixed;
-  background-color: #000000;
+  filter: var(--mainFilter);
+  object-fit: fill;
 }
 
-.hamburger p {
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-  font-size: 1.5rem;
-  font-weight: 500;
-  cursor: pointer;
+.headerLogo {
+  height: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  margin: 0 auto;
+  filter: var(--mainFilter);
+}
+
+.headerLogo img {
+  height: 100%;
+  cursor: pointer;
+}
+
+.headerMenu {
+  font-size: 3em;
+}
+
+.headerMenu.active {
+  transform: rotate(-90deg);
+  transition: transform 0.3s ease-in-out;
+}
+
+.MenuDesplegable {
+  position: fixed;
+  top: 0;
+  left: -20%;
+  bottom: 0;
+  z-index: 998;
+  background: #000000;
+  width: 20%;
+  box-shadow: 0 0 10px 0 #000000;
+  transition: left 3s ease;
+}
+
+.MenuDesplegable.open {
+  left: 0;
+}
+
+.listaMenu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 50px;
+  right: 0;
   height: 100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.navbarNav {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  list-style: none;
-  margin: 0;
-}
-
-.open .navbarNav {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 4em;
+  filter: var(--mainFilter);
 }
 
-.navItem {
-  padding: 0 0.5rem;
-  margin: 0.5em;
+.listaMenu li {
+  padding: 20px;
+  width: 50%;
+  text-align: center;
+  margin-top: 5%;
 }
 
-.navItem:hover {
+.listLi a {
+  font-size: 2em;
+  color: #ffffff;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  font-family: var(--mainFont);
+}
+
+.listLi p:hover {
+  color: var(--red);
   cursor: pointer;
-  scale: 1.1;
-  transition: 0.5s;
-}
-
-.open .navItem {
-  padding: 1em;
-  margin: 0;
 }
 
 @media (max-width: 767px) {
-  .hamburger {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .HeaderAulify {
+    height: 5em;
   }
 
-  .navbar {
-    flex-direction: column;
-    height: 100vh;
-    align-items: center;
-  }
-
-  .navbarNav {
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100%;
+  .MenuDesplegable {
     width: 100%;
-    position: fixed;
-    top: 4em;
   }
 
-  .logo {
-    margin-left: 0;
+  .listaMenu {
+    top: 5em;
   }
 
-  .navItem {
-    padding: 1em;
-    margin: 0;
+  .listLi a {
+    font-size: 1.5em;
   }
 
-  .open .navItem {
-    padding: 1em;
-    margin: 0;
+  .headerLogo {
+    height: 100%;
   }
 
-  .open .socialMediaContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    list-style: none;
-    margin-left: 0.5em;
-    height: 25px;
-    border-left: 1px solid #ffffff;
+  .headerLogo img {
+    height: 100%;
   }
 
-  .socialMediaContainer {
-    border-left: none;
-    display: flex;
-    flex-direction: column;
+  .headerMenu {
+    font-size: 2em;
   }
 }
