--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -28,6 +28,8 @@
 
 .headerMenu {
   font-size: 3em;
+  cursor: pointer;
+
 }
 
 .headerMenu.active {
@@ -44,11 +46,12 @@
   background: #000000;
   width: 20%;
   box-shadow: 0 0 10px 0 #000000;
-  transition: left 3s ease;
 }
 
 .MenuDesplegable.open {
   left: 0;
+  transition: left 3s ease;
+
 }
 
 .listaMenu {
