--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -9,8 +9,8 @@
   left: 0;
   right: 0;
   z-index: 999;
-  filter: var(--mainFilter);
   object-fit: fill;
+  background-color: #000000;
 }
 
 .headerLogo {
@@ -18,7 +18,6 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  filter: var(--mainFilter);
 }
 
 .headerLogo img {
@@ -29,7 +28,6 @@
 .headerMenu {
   font-size: 3em;
   cursor: pointer;
-
 }
 
 .headerMenu.active {
@@ -51,7 +49,6 @@
 .MenuDesplegable.open {
   left: 0;
   transition: left 3s ease;
-
 }
 
 .listaMenu {
@@ -67,7 +64,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  filter: var(--mainFilter);
 }
 
 .listaMenu li {
@@ -82,7 +78,6 @@
   color: #ffffff;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
-  font-family: var(--mainFont);
 }
 
 .listLi p:hover {
