--- a/src/Containers/teamSection/teamSection.module.css
+++ b/src/Containers/teamSection/teamSection.module.css
@@ -1,19 +1,22 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  padding: 6rem;
-  min-height: 100vh;
-  background-color: #000000;
-  margin: 0 auto;
-}
-
-.top {
+.topteamSection {
+  width: 100%;
+  height: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1em;
+  text-align: justify;
+}
+
+.topMedium {
   width: 100%;
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  text-align: justify;
+  background-color: #ffffff;
 }
 
 .bottom {
@@ -56,7 +59,7 @@
   color: #ffffff;
 }
 
-.boardImageContainer{
+.boardImageContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,9 +67,10 @@
   padding: 2em;
 }
 
-.boardImageContainer img{
+.boardImageContainer img {
   width: 100%;
   height: auto;
   border: 1px solid #ffffff;
   border-radius: 10px;
 }
+
