--- a/src/Components/PeopleComponent/People.module.css
+++ b/src/Components/PeopleComponent/People.module.css
@@ -6,8 +6,8 @@
   padding: 0;
   width: 90%;
   max-width: 1600px;
-  color: #ffffff;
   margin: 2em auto;
+  color: #000000;
 }
 
 .container:hover {
@@ -34,8 +34,8 @@
   padding: 0;
   border-radius: 50%;
   overflow: hidden;
-  border: 2px solid #ffffff;
-  box-shadow: 0 0 10px 0 #ffffff;
+  border: 1px solid #000000;
+  box-shadow: 0 0 10px 0 #000000;
 }
 
 .imgContainer img {
@@ -71,4 +71,21 @@
   width: 100%;
   padding: 0;
   margin-top: 1em;
+}
+
+@media (max-width: 767px) {
+  .container {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .left {
+    width: 100%;
+    padding: 0;
+  }
+
+  .right {
+    width: 100%;
+    padding: 0;
+  }
 }
