--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -31,71 +31,17 @@
   background-color: #ffffff;
 }
 
+@media (max-width: 767px) {
+  .main {
+    padding: 1em;
+  }
 
-.right {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1em;
-  text-align: justify;
-  background-color: #ffffff;
+  .topSection {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .teamSection {
+    padding: 0;
+  }
 }
-
-.left {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 5em;
-  text-align: justify;
-  background-color: black;
-  color: white;
-}
-
-.top {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 20%;
-  margin: 1em 0;
-}
-
-.middle {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 20%;
-  margin: 1em 0;
-}
-
-.bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 60%;
-}
-
-.top h1 {
-  font-size: 2rem;
-  overflow: hidden;
-  white-space: nowrap;
-  animation: type 5s steps(40, end) forwards;
-  margin: 1em 0;
-
-}
-
-.bottom p {
-  font-size: 1.2rem;
-  margin-top: 2em;
-}
-
-.rover {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: drop-shadow(16px 16px 20px rgba(0, 0, 0, 0.5));
-}
-
-
-
