--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -42,8 +42,10 @@
   bottom: 0;
   z-index: 998;
   background: #000000;
-  width: 20%;
+  width: 15%;
   box-shadow: 0 0 10px 0 #000000;
+  align-items: flex-start; /* Align items to the left */
+
 }
 
 .MenuDesplegable.open {
@@ -62,14 +64,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
+
 
 .listaMenu li {
   padding: 20px;
   width: 50%;
-  text-align: center;
   margin-top: 5%;
 }
 
