--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 5em;
-  padding: 0 30px;
+  padding: 0 2em;
   position: fixed;
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@
 }
 
 .headerMenu.active {
-  transform: rotate(-90deg);
+  transform: rotate(-180deg);
   transition: transform 0.3s ease-in-out;
 }
 
