--- a/src/Containers/landingSection/landingSection.module.css
+++ b/src/Containers/landingSection/landingSection.module.css
@@ -27,6 +27,8 @@
   padding: 1em;
   text-align: justify;
   background-color: #ffffff;
+  border: 1px solid #ffffff;
+  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
 }
 
 .left {
