--- a/src/Components/PeopleComponent/People.module.css
+++ b/src/Components/PeopleComponent/People.module.css
@@ -7,7 +7,6 @@
   width: 90%;
   max-width: 1600px;
   margin: 2em auto;
-  color: #000000;
 }
 
 .container:hover {
@@ -34,8 +33,9 @@
   padding: 0;
   border-radius: 50%;
   overflow: hidden;
-  border: 1px solid #000000;
-  box-shadow: 0 0 10px 0 #000000;
+  border: 1px solid #ffffff;
+  box-shadow: 0 0 10px 0 #fff;
+
 }
 
 .imgContainer img {
