--- a/src/Components/SliderComponent/Slider.module.css
+++ b/src/Components/SliderComponent/Slider.module.css
@@ -1,5 +1,4 @@
 .slider {
-  background-color: aliceblue;
   width: 100%;
   height: 50%;
   display: flex;
@@ -17,6 +16,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: drop-shadow(16px 16px 20px rgba(0, 0, 0, 0.5));
   border-radius: 10px;
+  border: 1px solid #ffffff;
+
 }
