adds header and footer

--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -74,6 +74,12 @@
   margin-top: 5%;
 }
 
+.listaMenu li:hover {
+  cursor: pointer;
+  scale: 1.2;
+  transition: 0.5s;
+}
+
 .listLi a {
   font-size: 2em;
   color: #ffffff;
