--- a/src/Components/HeaderComponent/HeaderComponent.module.css
+++ b/src/Components/HeaderComponent/HeaderComponent.module.css
@@ -1,123 +1,63 @@
-.Header {
+.container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  height: 5em;
+  height: 10vh;
+}
+
+.Header {
   padding: 0 2em;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  object-fit: fill;
   background-color: #000000;
 }
 
-.headerLogo {
-  height: 50%;
+.headerContent {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  width: 100%;
 }
 
-.headerLogo img {
-  height: 100%;
-  cursor: pointer;
+.menuContainer {
+  display: flex;
+  align-items: flex-start; /* Align items to the top of the container */
 }
 
-.headerMenu {
-  font-size: 3em;
-  cursor: pointer;
-}
-
-.headerMenu.active {
-  transform: rotate(-180deg);
-  transition: transform 0.3s ease-in-out;
-}
-
-.MenuDesplegable {
-  position: fixed;
-  top: 0;
-  left: -20%;
-  bottom: 0;
-  z-index: 998;
-  background: #000000;
-  width: 15%;
-  box-shadow: 0 0 10px 0 #000000;
-  align-items: flex-start; /* Align items to the left */
-
-}
-
-.MenuDesplegable.open {
-  left: 0;
-  transition: left 3s ease;
-}
-
-.listaMenu {
+.menuList {
   list-style: none;
   padding: 0;
   margin: 0;
-  position: absolute;
-  top: 50px;
-  right: 0;
-  height: 100%;
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  
 }
 
-
-.listaMenu li {
-  padding: 20px;
-  width: 50%;
-  margin-top: 5%;
+.menuItem {
+  padding-left: 50px; /* Adjust as needed */
+  padding-right: 50px;
 }
 
-.listaMenu li:hover {
-  cursor: pointer;
-  scale: 1.2;
-  transition: 0.5s;
-}
-
-.listLi a {
-  font-size: 2em;
+.menuItem p {
+  font-size: 1.5em; /* Adjust font size */
+  font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
   color: #ffffff;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-}
-
-.listLi p:hover {
-  color: var(--red);
   cursor: pointer;
+  transition: color 0.3s ease-in-out;
 }
 
-@media (max-width: 767px) {
-  .HeaderAulify {
-    height: 5em;
-  }
+.menuItem p:hover {
+  color: red;
+}
 
-  .MenuDesplegable {
-    width: 100%;
-  }
+.headerLogo {
+  display: flex;
+  justify-content: center; /* Horizontally center the logo */
+  align-items: center; /* Vertically center the logo */
+  width: 70px; /* Adjust as needed */
+  height: 70px; /* Adjust as needed */
+  border-radius: 50%; /* Makes it a circle */
+  border: 2px solid white; /* Adjust border as needed */
+}
 
-  .listaMenu {
-    top: 5em;
-  }
-
-  .listLi a {
-    font-size: 1.5em;
-  }
-
-  .headerLogo {
-    height: 100%;
-  }
-
-  .headerLogo img {
-    height: 100%;
-  }
-
-  .headerMenu {
-    font-size: 2em;
-  }
+.headerLogo img {
+  height: 50px; /* Adjust as needed */
+  display: block;
 }
