--- a/src/Containers/landingSection/landingSection.module.css
+++ b/src/Containers/landingSection/landingSection.module.css
@@ -36,7 +36,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 5em;
+  padding-left: 5em;
+  padding-right: 5em;
+  
   text-align: justify;
   background-color: black;
   color: white;
