--- a/src/Containers/teamSection/teamSection.module.css
+++ b/src/Containers/teamSection/teamSection.module.css
@@ -41,7 +41,8 @@
   font-weight: bold;
   margin: 0;
   padding: 0;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff;
 }
 
 .rightBottom {
