--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
   background-color: #000000;
   color: #000;
@@ -12,7 +11,7 @@
 
 .topSection {
   width: 100%;
-  min-height: 90vh;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -61,4 +60,60 @@
     flex-direction: column;
     padding: 0;
   }
+}
+
+
+.arrowWrapper {
+  opacity: 0;
+}
+
+.fadeIn {
+  animation: fadeIn 1s forwards 2s; /* Fade-in animation with a delay of 2 seconds */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+/* SocialMediaIcons.module.css */
+.iconsContainer {
+  position: fixed;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1000; /* Ensure it stays above other content */
+}
+
+/* ... rest of your styles */
+
+
+.icon {
+  cursor: pointer;
+  font-size: 24px;
+  padding: 10px; 
+}
+
+/* In page.module.css */
+.socialIconsWrapper {
+  position: fixed;
+  right: 20px; /* Adjust as needed */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1500; /* High value to stay above other content */
+  background-color: black;
 }
