--- a/src/Components/FooterComponent/footer.module.css
+++ b/src/Components/FooterComponent/footer.module.css
@@ -5,81 +5,59 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-}
-
-.footerContent {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  background: linear-gradient(to bottom, black, white); /* Gradient from black at the top to white at the bottom */
 }
 
 .socialMedia {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  justify-items: center;
   align-items: center;
+  padding: 20px;
 }
 
-.socialItem {
-  color: #fff;
-  text-decoration: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 1em;
-  width: 100%;
+@media (max-width: 768px) {
+  .socialMedia {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-.socialItem:hover {
-  scale: 1.2;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-.socialIcon {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+@media (max-width: 480px) {
+  .socialMedia {
+    grid-template-columns: 1fr;
+  }
 }
 
 .socialIcon a {
-  width: 5em;
-  height: 5em;
-  padding: 1em;
+  width: auto;
+  height: auto;
+  padding: 0.5em;
   border-radius: 50%;
-  color: #fff;
-  border: 1px solid #fff;
-  display: flex;
-  justify-content: center;
+}
+
+.socialItem {
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  padding: 0;
 }
 
 .socialText {
-  width: 50%;
-  padding: 1em;
-  display: flex;
+  padding-top: 10px;
   justify-content: center;
-  align-items: center;
+  width: auto;
+  text-align: center;
 }
 
-@media (max-width: 767px) {
-  .footer {
-    flex-direction: column;
-  }
-  .socialMedia {
-    flex-direction: column;
-  }
-  .socialItem {
-    padding: 0.5em;
-  }
-  .socialIcon {
-    width: 50%;
-  }
-  .socialText {
-    width: 50%;
-  }
+.texts {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+
+  color: #ffffff;
+  justify-content: center;
+
+  text-align: center;
 }
