--- a/src/Containers/teamSection/teamSection.module.css
+++ b/src/Containers/teamSection/teamSection.module.css
@@ -34,7 +34,9 @@
   align-items: center;
   width: 50%;
   padding: 0;
-  margin: 0 auto;
+  margin: 30px auto;
+  
+  
 }
 .title {
   font-size: 2rem;
@@ -61,10 +63,14 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding: 0;
-  width: 100%;
+  padding: 7px;
+  width: 70%;
   max-width: 1200px;
   color: #ffffff;
+  background-color: #0A0C1A ;
+  
+  
+
 }
 
 .boardImageContainer {
