--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,8 +12,7 @@
 .topSection {
   width: 100%;
 
-  display: flex;
-  flex-direction: row;
+
   justify-content: space-between;
   align-items: center;
   padding: 1em;
@@ -33,7 +32,7 @@
 
 .challengeSection {
   width: 100%;
-  min-height: 90vh;
+  min-height: 120vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -68,7 +67,7 @@
 }
 
 .fadeIn {
-  animation: fadeIn 1s forwards 2s; /* Fade-in animation with a delay of 2 seconds */
+  animation: fadeIn 1s forwards 2s
 }
 
 @keyframes fadeIn {
@@ -81,7 +80,6 @@
 }
 
 
-/* SocialMediaIcons.module.css */
 .iconsContainer {
   position: fixed;
   left: 0;
@@ -90,10 +88,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1000; /* Ensure it stays above other content */
+  z-index: 1000; 
 }
 
-/* ... rest of your styles */
+
 
 
 .icon {
@@ -102,18 +100,18 @@
   padding: 10px; 
 }
 
-/* In page.module.css */
 .socialIconsWrapper {
   position: fixed;
-  right: 20px; /* Adjust as needed */
-  top: 50%;
+  right: 20px;
+  top: 40%;
   transform: translateY(-50%);
-  width: 100px;
-  height: 300px;
+  width: 70px;
+  height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  z-index: 1500; /* High value to stay above other content */
-  background-color: black;
+  z-index: 1500;
+  background-color: #151515;
+  border-radius: 25px;
 }
