--- a/src/Components/SliderComponent/Slider.module.css
+++ b/src/Components/SliderComponent/Slider.module.css
@@ -1,6 +1,6 @@
 .slider {
   width: 100%;
-  height: 50%;
+  height: 40em;
   display: flex;
 }
 
@@ -18,5 +18,4 @@
   object-fit: cover;
   border-radius: 10px;
   border: 1px solid #ffffff;
-
 }
