--- a/src/Containers/teamSection/teamSection.module.css
+++ b/src/Containers/teamSection/teamSection.module.css
@@ -35,8 +35,6 @@
   width: 50%;
   padding: 0;
   margin: 30px auto;
-  
-  
 }
 .title {
   font-size: 2rem;
@@ -67,10 +65,6 @@
   width: 70%;
   max-width: 1200px;
   color: #ffffff;
-  background-color: #0A0C1A ;
-  
-  
-
 }
 
 .boardImageContainer {
@@ -78,8 +72,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   padding: 2em;
-
 }
 
 .boardImageContainer img {
