--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,21 +1,13 @@
 .main {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 7.5em;
-  min-height: 100vh;
+  padding: 6rem;
+  min-height: 90vh;
   background-color: #fff;
   color: #000;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+  margin: 0 auto;
 }
 
 .leftContainer {
@@ -23,8 +15,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  margin-right: 2em;
+  border-right: 1px solid #000;
 }
 
 .rightContainer {
@@ -32,10 +25,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 10%;
-  height: 100%;
-  padding: 1em;
-  border-left: 1px solid #000;
+  width: 20%;
+}
+
+.topCharts,
+.bottomCharts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+  margin-bottom: 2em;
+}
+
+.topContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 2em;
 }
 
 .middleContainer {
@@ -44,60 +54,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
-  padding: 1em;
+  margin-bottom: 2em;
 }
 
-.middleLeftContainer {
+.middleLeftContainer{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  height: 100%;
-  padding: 1em;
-  margin: 1em;
-}
-
-.middleRightContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-  padding: 1em;
-}
-
-.temperatureIcon {
-  width: 2em;
-  height: 100%;
-}
-
-.topContainerCamera {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  height: 50%;
-  padding: 1em;
-  box-sizing: border-box;
-}
-.camera {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  margin: 0 auto;
-}
-
-.bottomContainer{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  height: 50%;
-  padding: 1em;
-  box-sizing: border-box;
+  width: 20%;
 }
